<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.models.MoreFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_version"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="@drawable/selector_more_bg"
            android:padding="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_name" />
            <TextView
                android:id="@+id/more_version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_unknown" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_acknowledge"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_more_bg"
            android:padding="10dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/acknowledge_2_0" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/acknowledge_1_2" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_feedback"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_more_bg"
            android:padding="10dp"
            android:gravity="center_vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/feedback" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_opensource"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_more_bg"
            android:padding="10dp"
            android:gravity="center_vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/opensource" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_license"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_more_bg"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/license" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

